--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@nrwl/react": "^9.1.2",
     "@nrwl/workspace": "9.1.2",
     "@types/node": "~8.9.4",
     "dotenv": "6.2.0",
+    "eslint": "6.8.0",
+    "prettier": "1.19.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.7.4",
-    "prettier": "1.19.1"
+    "typescript": "~3.7.4"
   }
 }
