--- a/package.json
+++ b/package.json
@@ -26,9 +26,15 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "document-register-element": "1.13.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "styled-components": "5.0.0",
+    "react-router-dom": "5.1.2"
+  },
   "devDependencies": {
-    "@nrwl/react": "^9.1.2",
+    "@nrwl/react": "9.1.2",
     "@nrwl/workspace": "9.1.2",
     "@types/node": "~8.9.4",
     "dotenv": "6.2.0",
@@ -36,6 +42,26 @@
     "prettier": "1.19.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
-    "typescript": "~3.7.4"
+    "typescript": "~3.7.4",
+    "@nrwl/jest": "9.1.2",
+    "jest": "24.9.0",
+    "@types/jest": "24.9.1",
+    "ts-jest": "24.0.0",
+    "cypress": "^4.1.0",
+    "@nrwl/cypress": "9.1.2",
+    "@nrwl/web": "9.1.2",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
+    "@testing-library/react": "9.4.0",
+    "@nrwl/eslint-plugin-nx": "9.1.2",
+    "@typescript-eslint/parser": "2.19.2",
+    "@typescript-eslint/eslint-plugin": "2.19.2",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-import": "2.19.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-react-hooks": "2.3.0",
+    "@types/styled-components": "4.4.2",
+    "@types/react-router-dom": "5.1.3"
   }
 }
