feat(coding-test): add input components feature

--- a/nx.json
+++ b/nx.json
@@ -17,6 +17,9 @@
     "react-coding-test-e2e": {
       "tags": [],
       "implicitDependencies": ["react-coding-test"]
+    },
+    "react-coding-test-feature-input-components": {
+      "tags": []
     }
   }
 }
