--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@tf-test/react-coding-test/feature-input-components": [
+        "libs/react-coding-test/feature-input-components/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
