--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
   },
   "private": true,
   "dependencies": {
+    "destyle.css": "^1.0.11",
     "document-register-element": "1.13.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "styled-components": "5.0.0",
-    "react-router-dom": "5.1.2"
+    "react-router-dom": "5.1.2",
+    "styled-components": "5.0.0"
   },
   "devDependencies": {
     "@nrwl/react": "9.1.2",
