feat(workspace): add react ui lib

--- a/nx.json
+++ b/nx.json
@@ -20,6 +20,9 @@
     },
     "react-coding-test-feature-input-components": {
       "tags": []
+    },
+    "react-ui": {
+      "tags": []
     }
   }
 }
