--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
       "@tf-test/react-coding-test/feature-input-components": [
         "libs/react-coding-test/feature-input-components/src/index.ts"
-      ]
+      ],
+      "@tf-test/react/ui": ["libs/react/ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
