feat(coding-test): add voting list feature

--- a/nx.json
+++ b/nx.json
@@ -23,6 +23,9 @@
     },
     "react-ui": {
       "tags": []
+    },
+    "react-coding-test-feature-voting-list": {
+      "tags": []
     }
   }
 }
