feat(coding-test): add register form feature

--- a/nx.json
+++ b/nx.json
@@ -26,6 +26,9 @@
     },
     "react-coding-test-feature-voting-list": {
       "tags": []
+    },
+    "react-coding-test-feature-regsiter-form": {
+      "tags": []
     }
   }
 }
