--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "5.1.2",
-    "styled-components": "5.0.0"
+    "styled-components": "5.0.0",
+    "@reduxjs/toolkit": "1.1.0",
+    "react-redux": "7.1.3",
+    "@types/react-redux": "7.1.5"
   },
   "devDependencies": {
     "@nrwl/react": "9.1.2",
