--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
   },
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "1.1.0",
+    "@types/react-redux": "7.1.5",
     "destyle.css": "^1.0.11",
     "document-register-element": "1.13.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-router-dom": "5.1.2",
-    "styled-components": "5.0.0",
-    "@reduxjs/toolkit": "1.1.0",
     "react-redux": "7.1.3",
-    "@types/react-redux": "7.1.5"
+    "react-router-dom": "5.1.2",
+    "redux-dynamic-modules": "^5.2.0",
+    "styled-components": "5.0.0"
   },
   "devDependencies": {
     "@nrwl/react": "9.1.2",
