feat(workspace): add voting candidates util lib

--- a/nx.json
+++ b/nx.json
@@ -29,6 +29,9 @@
     },
     "react-coding-test-feature-register-form": {
       "tags": []
+    },
+    "shared-util-voting-candidates": {
+      "tags": []
     }
   }
 }
