feat(workspace): add validators util lib

--- a/nx.json
+++ b/nx.json
@@ -32,6 +32,9 @@
     },
     "shared-util-voting-candidates": {
       "tags": []
+    },
+    "shared-util-validators": {
+      "tags": []
     }
   }
 }
