feat(workspace):  add formatter util lib

--- a/nx.json
+++ b/nx.json
@@ -35,6 +35,9 @@
     },
     "shared-util-validators": {
       "tags": []
+    },
+    "shared-util-formatters": {
+      "tags": []
     }
   }
 }
