feat(workspace): add voting candidates models lib

--- a/nx.json
+++ b/nx.json
@@ -38,6 +38,9 @@
     },
     "shared-util-formatters": {
       "tags": []
+    },
+    "shared-models-voting-candidates": {
+      "tags": []
     }
   }
 }
