--- a/nx.json
+++ b/nx.json
@@ -41,6 +41,9 @@
     },
     "shared-models-voting-candidates": {
       "tags": []
+    },
+    "shared-util-generators": {
+      "tags": []
     }
   }
 }
