feat(workspace): disable standard-version auto commit

--- a/package.json
+++ b/package.json
@@ -73,5 +73,10 @@
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
     "typescript": "~3.7.4"
+  },
+  "standard-version": {
+    "skip": {
+      "commit": true
+    }
   }
 }
