--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   },
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@reduxjs/toolkit": "1.1.0",
     "@types/faker": "^4.1.10",
     "@types/react-redux": "7.1.5",
