--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,8 @@
       ],
       "@tf-test/shared/util-generators": [
         "libs/shared/util-generators/src/index.ts"
-      ]
+      ],
+      "@tf-test/shared/util-data": ["libs/shared/util-data/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
