--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@reduxjs/toolkit": "1.1.0",
     "@types/faker": "^4.1.10",
     "@types/react-redux": "7.1.5",
+    "@types/redux-form": "^8.2.3",
     "destyle.css": "^1.0.11",
     "document-register-element": "1.13.1",
     "faker": "^4.1.0",
@@ -44,6 +45,7 @@
     "react-spinners": "^0.8.1",
     "redux-dynamic-modules": "^5.2.0",
     "redux-dynamic-modules-thunk": "^5.2.0",
+    "redux-form": "^8.3.1",
     "styled-components": "5.0.0"
   },
   "devDependencies": {
