--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "destyle.css": "^1.0.11",
     "document-register-element": "1.13.1",
     "faker": "^4.1.0",
+    "formik": "^2.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
@@ -45,7 +46,8 @@
     "react-spinners": "^0.8.1",
     "redux-dynamic-modules": "^5.2.0",
     "redux-dynamic-modules-thunk": "^5.2.0",
-    "styled-components": "5.0.0"
+    "styled-components": "5.0.0",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
     "@nrwl/cypress": "9.1.2",
