feat(workspace): add signup api data-access lib

--- a/nx.json
+++ b/nx.json
@@ -50,6 +50,9 @@
     },
     "react-util-helpers": {
       "tags": []
+    },
+    "shared-data-access-signup-api": {
+      "tags": []
     }
   }
 }
