--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@reduxjs/toolkit": "1.1.0",
     "@types/faker": "^4.1.10",
+    "@types/qs": "^6.9.1",
     "@types/react-redux": "7.1.5",
     "@types/redux-form": "^8.2.3",
     "@types/yup": "^0.26.33",
+    "axios": "^0.19.2",
     "destyle.css": "^1.0.11",
     "document-register-element": "1.13.1",
     "faker": "^4.1.0",
     "formik": "^2.1.4",
+    "qs": "^6.9.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
