--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "qs": "^6.9.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-redux": "7.1.3",
     "react-router-dom": "5.1.2",
     "react-spinners": "^0.8.1",
