feat(worksapce): add surge deploy stage

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
+    "deploy:react-coding-test:surge": "nx deploy react-coding-test --configuration=surge",
     "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
@@ -81,6 +82,7 @@
     "jest": "24.9.0",
     "prettier": "1.19.1",
     "standard-version": "^7.1.0",
+    "surge": "^0.21.3",
     "ts-jest": "24.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
