--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "deploy:react-coding-test:surge": "nx deploy react-coding-test --configuration=surge",
+    "deploy:react-coding-test:surge": "nx run react-coding-test:build:production && nx run react-coding-test:deploy:surge",
     "lint": "nx workspace-lint && nx lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
